@@ -76,7 +76,7 @@ public class BirchCraftingScreenHandler extends AbstractCraftingScreenHandler {
         }
 
         resultInventory.setStack(0, itemStack);
-        handler.setPreviousTrackedSlot(0, itemStack);
+        handler.setReceivedStack(0, itemStack);
         serverPlayerEntity.networkHandler.sendPacket(new ScreenHandlerSlotUpdateS2CPacket(handler.syncId, handler.nextRevision(), 0, itemStack));
     }
 
@@ -121,7 +121,7 @@ public class BirchCraftingScreenHandler extends AbstractCraftingScreenHandler {
             ItemStack itemStack2 = slot2.getStack();
             itemStack = itemStack2.copy();
             if (slot == 0) {
-                this.context.run((world, pos) -> itemStack2.getItem().onCraftByPlayer(itemStack2, world, player));
+                itemStack2.getItem().onCraftByPlayer(itemStack2, player);
                 if (!this.insertItem(itemStack2, 10, 46, true)) {
                     return ItemStack.EMPTY;
                 }
@@ -167,7 +167,7 @@ public class BirchCraftingScreenHandler extends AbstractCraftingScreenHandler {
 
     @Override
     public Slot getOutputSlot() {
-        return this.slots.get(0);
+        return this.slots.getFirst();
     }
 
     @Override
